--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+python==3.7.8
 biopython==1.78
-h5py==3.7.0
-networkx==2.8.4
-numpy==1.22.3
-pandas==1.5.1
-tqdm==4.64.1
+h5py==3.1.0
+networkx==2.5
+numpy==1.19.2
+pandas==1.1.5
+tqdm==4.54.1
 scipy==1.5.3
 matplotlib==3.3.3
